fix: revert hoursStyling changes (#692)
Using max width with align right would look strange in certain
situations

I've also noticed that if the services column is missing, then the other
columns properly take up the space.

In this case the CoreInfo column is much wider and with full width it
looks quite odd.

This reverts the HoursStyling changes while keeping the header changes
from:
https://github.com/yext/visual-editor/commit/0396e0fa5078bbfe411e0b153a064e518f173112

Additionally this updates CoreInfoSection to hide the CoreInfo column if
it has no data

---------

--- a/packages/visual-editor/src/editor/index.css
+++ b/packages/visual-editor/src/editor/index.css
@@ -9,15 +9,13 @@
 .HoursTable-row {
   display: flex;
   justify-content: space-between;
-  width: auto;
-  max-width: 100%;
+  width: 18rem;
 }
 
 .components .HoursTable-intervals {
   display: flex;
   flex-direction: column;
   flex: 0 0 auto;
-  text-align: right;
 }
 
 /* Custom styling for entity field selection in the Puck sidebar. */
